[enhancement] Removed the stepper

--- a/src/app/presentation/components/side-navigation/side-navigation.component.html
+++ b/src/app/presentation/components/side-navigation/side-navigation.component.html
@@ -1,5 +1,6 @@
 <mat-tab-group>
   <mat-tab label="Advantages">
-    <gurpsy-advantages-stepper></gurpsy-advantages-stepper>
+    <gurpsy-advantages-table>
+    </gurpsy-advantages-table>
   </mat-tab>
 </mat-tab-group>
