[enhancement] Work in progress for the rolling dice

--- a/src/app/presentation/dialoges/generic/dice-dialog/dice-dialog.component.html
+++ b/src/app/presentation/dialoges/generic/dice-dialog/dice-dialog.component.html
@@ -1,9 +1,8 @@
 <mat-dialog-content>
-  <div class="diceView" #canvas>
-  </div>
+  <canvas class="diceView" id="renderCanvas"></canvas>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button color="primary" (click)="onRethrow()"> {{'DIALOG.DICE.RETHROW'| translate}}</button>
-  <button mat-button color="primary" matDialogClose> {{'DIALOG.CLOSE'| translate}}</button>
+  <button mat-button color="primary" (click)="onRethrow()"> {{ 'DIALOG.DICE.RETHROW'| translate }}</button>
+  <button mat-button color="primary" matDialogClose> {{ 'DIALOG.CLOSE'| translate }}</button>
 </mat-dialog-actions>
