[enhancement] Furhter improvement of the dice-thrower

--- a/src/app/presentation/dialoges/generic/dice-dialog/dice-dialog.component.html
+++ b/src/app/presentation/dialoges/generic/dice-dialog/dice-dialog.component.html
@@ -3,6 +3,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button color="primary" (click)="onRethrow()"> {{ 'DIALOG.DICE.RETHROW'| translate }}</button>
+  <button cdkFocusInitial mat-button color="primary" (click)="onRethrow()"> {{ 'DIALOG.DICE.RETHROW'| translate }}</button>
   <button mat-button color="primary" matDialogClose> {{ 'DIALOG.CLOSE'| translate }}</button>
 </mat-dialog-actions>
